<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <!-- 顶部标题栏 -->

    <fragment
        android:id="@+id/title_add_record"
        android:name="cn.hjf.gollumaccount.fragment.CommonHeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <!-- 滚动的信息输入区 -->

    <ScrollView
        android:id="@+id/sv_record_info_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_record_create"
        android:layout_below="@id/title_add_record"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!-- 名称 -->

            <LinearLayout
                android:id="@+id/llyt_record_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_record_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/label_input_indicator"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/textsize_indicator" />

                <EditText
                    android:id="@+id/et_record_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <!-- 金额 -->

            <LinearLayout
                android:id="@+id/llyt_record_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_below="@id/llyt_record_name"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_record_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/label_input_indicator"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/textsize_indicator" />

                <EditText
                    android:id="@+id/et_record_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" >
                </EditText>
            </LinearLayout>

            <!-- 类别 -->

            <LinearLayout
                android:id="@+id/llyt_record_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_below="@id/llyt_record_price"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_record_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/label_input_indicator"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/textsize_indicator" />

                <RelativeLayout
                    android:id="@+id/rl_record_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tv_record_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_toLeftOf="@+id/iv_ic_right"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_type"
                        android:padding="10dp"
                        android:textColor="@color/color_textview_content"
                        android:textSize="@dimen/textsize_content" />

                    <ImageView
                        android:id="@id/iv_ic_right"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:padding="16dp"
                        android:src="@drawable/listitem_btn_right" />
                </RelativeLayout>
            </LinearLayout>

            <!-- 消费者 -->

            <LinearLayout
                android:id="@+id/llyt_consumer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_below="@id/llyt_record_item"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_consumer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_consumer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <EditText
                    android:id="@+id/et_consumer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_consumer"
                    android:maxLength="20"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>

            <!-- 付款者 -->

            <LinearLayout
                android:id="@+id/llyt_payer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_below="@id/llyt_consumer"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_payer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_payer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <EditText
                    android:id="@+id/et_payer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_payer"
                    android:maxLength="20"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>

            <!-- 日期 -->

            <LinearLayout
                android:id="@+id/llyt_record_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/llyt_payer"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_record_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/label_input_indicator"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/textsize_indicator" />

                <TextView
                    android:id="@+id/et_record_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_date"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>

            <!-- 时间 -->

            <LinearLayout
                android:id="@+id/llyt_record_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/llyt_record_date"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_record_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/label_input_indicator"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/textsize_indicator" />

                <TextView
                    android:id="@+id/et_record_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_time"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>

            <!-- 备注 -->

            <LinearLayout
                android:id="@+id/llyt_record_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llyt_record_time"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:minHeight="50dp" >

                <TextView
                    android:id="@+id/tv_record_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/label_remark"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <EditText
                    android:id="@+id/et_record_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_remark"
                    android:maxLength="50"
                    android:padding="10dp"
                    android:textColor="@color/color_textview_content"
                    android:textSize="@dimen/textsize_content" >
                </EditText>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <!-- 创建按钮 -->

    <Button
        android:id="@+id/btn_record_create"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:padding="10dp"
        android:text="@string/btn_create_consume_record"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_indicator" />

</RelativeLayout>