<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <!-- 顶部标题栏 -->

    <fragment
        android:id="@+id/title_about"
        android:name="cn.hjf.gollumaccount.fragment.CommonHeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_about" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/llyt_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:background="@color/white"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/label_version"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/gray_deep"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_below="@id/llyt_version"
                android:background="@color/white"
                android:layout_marginTop="1dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/label_author"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/gray_deep"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyt_declare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_below="@id/llyt_author"
                android:background="@color/white"
                android:layout_marginTop="1dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/label_declare"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_content" />

                <TextView
                    android:id="@+id/tv_declare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/gray_deep"
                    android:textSize="@dimen/textsize_content" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>